// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Header Snapshots renders a basic PageHeader as expected 1`] = `
.emotion-3 {
  height: 84px;
  background-image: linear-gradient(to bottom right,#0875e1,#005cb9);
  color: #ffffff;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  overflow: hidden;
  padding: 0 40px;
}

.emotion-0 {
  font-weight: 500;
  font-size: 28px;
  line-height: 36px;
  color: #ffffff;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px 0;
  margin: 0;
  white-space: nowrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 32px;
}

.emotion-1 > *:not(:last-child) {
  margin-right: 8px;
}

<header
  className="emotion-3"
>
  <div
    className="emotion-2"
    title="Test Page Header"
  >
    <h2
      className="emotion-0"
    >
      Test Page Header
    </h2>
    <div
      className="emotion-1"
    />
  </div>
</header>
`;

exports[`Page Header Snapshots renders a marketing context PageHeader as expected 1`] = `
.emotion-3 {
  height: 84px;
  background-image: linear-gradient(to bottom right,#0875e1,#005cb9);
  color: #ffffff;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-0 {
  font-weight: 500;
  font-size: 28px;
  line-height: 36px;
  color: #ffffff;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  padding: 12px 0;
  margin: 0;
  white-space: nowrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 32px;
}

.emotion-1 > *:not(:last-child) {
  margin-right: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
  overflow: hidden;
  box-sizing: border-box;
  margin: 0 auto;
  width: 100%;
  max-width: 1440px;
  padding: 0 24px;
}

@media (min-width:768px) {
  .emotion-2 {
    padding: 0 40px;
  }
}

@media (min-width:992px) {
  .emotion-2 {
    padding: 0 64px;
  }
}

@media (min-width:1199px) {
  .emotion-2 {
    padding: 0 100px;
  }
}

<header
  className="emotion-3"
>
  <div
    className="emotion-2"
    title="Test Marketing Page Header"
  >
    <h2
      className="emotion-0"
    >
      Test Marketing Page Header
    </h2>
    <div
      className="emotion-1"
    />
  </div>
</header>
`;
